# rustfest-rome18-gtk-gst-workshop

./: Cargo.toml  LICENSE  README.md  index.html
css/: reveal-override.css
src/: about_dialog.rs  app.rs  gstreamer.rs  header_bar.rs  headerbar.rs  macros.rs  main.rs  overlay.rs  pipeline.rs  settings.rs  types.rs  utils.rs
